SchoolYear Add/Edit/Delete done

--- a/CAPSTONE_TEAM01_2024/Views/Shared/_MainLayout.cshtml
+++ b/CAPSTONE_TEAM01_2024/Views/Shared/_MainLayout.cshtml
@@ -106,7 +106,18 @@
                                          style="width:30px; height:auto;">
                                 </div>
                                 <div class="col-10">
-                                    Năm Học
+                                    Danh Sách Năm Học
+                                </div>
+                            </a>
+                            <a class="row d-flex nav-link text-dark m-1 justify-content-center align-items-center m-0 p-1"
+                               asp-area="" asp-controller="Categories" asp-action="ClassList"
+                               style="text-decoration:none;">
+                                <div class="col-2">
+                                    <img src="~/Resources/Img/Icon5.png"
+                                         style="width:30px; height:auto;">
+                                </div>
+                                <div class="col-10">
+                                    Quản Lý Lớp
                                 </div>
                             </a>
                             <a class="row d-flex nav-link text-dark m-1 justify-content-center align-items-center m-0 p-1"
