--- a/CAPSTONE_TEAM01_2024/Views/Categories/SchoolYear.cshtml
+++ b/CAPSTONE_TEAM01_2024/Views/Categories/SchoolYear.cshtml
@@ -19,7 +19,8 @@
 		@TempData["MessageDeleteYear"]
 	</div>
 }
-@model IEnumerable<CAPSTONE_TEAM01_2024.Models.AcademicPeriod>
+@using CAPSTONE_TEAM01_2024.Utilities
+@model CAPSTONE_TEAM01_2024.ViewModels.SchoolYearViewModel
 <div class="content-wrapper" style="min-height: 912.2px;">
 	<!-- Content Header (Page header) -->
 	<header class="content-header">
@@ -67,44 +68,87 @@
 							</tr>
 						</thead>
 						<tbody id="periodTable">
-							@{
-								int number = 0;
-							}
-							@foreach (AcademicPeriod period in Model)
-							{
-								number++;
-								<tr class="table-row">
-									<th scope="row" class="text-center">@number</th>
-									<td class="text-center">@period.PeriodName</td>
-									<td class="text-center">@period.PeriodStart.ToString("dd/MM/yyyy")</td>
-									<td class="text-center">@period.PeriodEnd.ToString("dd/MM/yyyy")</td>
-									<td class="text-center">
-										<button type="button" class="btn btn-outline-primary btn-sm"
-												data-bs-toggle="modal"
-												data-bs-target="#EditPeriodModal"
-												data-period-id="@period.PeriodId"
-												data-period-name="@period.PeriodName"
-												data-period-start="@period.PeriodStart.ToString("yyyy-MM-dd")"
-												data-period-end="@period.PeriodEnd.ToString("yyyy-MM-dd")"
-												aria-label="Edit class details">
-											<i class="fa-solid fa-pen-to-square custom-icon"></i> Cập Nhật
-										</button>
-										<button type="button" class="btn btn-outline-danger btn-sm"
-												data-bs-toggle="modal"
-												data-bs-target="#DeletePeriodModal"
-												data-period-id="@period.PeriodId"
-												aria-label="Delete class">
-											<i class="fa-solid fa-trash custom-icon"></i> Xóa
-										</button>
-									</td>
-								</tr>
-							}
-							<!-- Additional rows can go here -->
-							<tr id="noResults" style="display: none;">
-								<td colspan="5" class="text-center">Không tìm thấy thông tin</td>
+						@{int number = (Model.PaginatedPeriods.PageIndex - 1) * Model.PaginatedPeriods.PageSize;}
+						@foreach (var period in Model.PaginatedPeriods)
+						{
+							number++;
+							<tr class="table-row">
+								<td scope="row" class="text-center">@number</td>
+								<td class="text-center">@period.PeriodName</td>
+								<td class="text-center">@period.PeriodStart.ToString("dd/MM/yyyy")</td>
+								<td class="text-center">@period.PeriodEnd.ToString("dd/MM/yyyy")</td>
+								<td class="text-center">
+									<button type="button" class="btn btn-outline-primary btn-sm"
+											data-bs-toggle="modal"
+											data-bs-target="#EditPeriodModal"
+											data-period-id="@period.PeriodId"
+											data-period-name="@period.PeriodName"
+											data-period-start="@period.PeriodStart.ToString("yyyy-MM-dd")"
+											data-period-end="@period.PeriodEnd.ToString("yyyy-MM-dd")"
+											aria-label="Edit class details">
+										<i class="fa-solid fa-pen-to-square custom-icon"></i> Cập Nhật
+									</button>
+									<button type="button" class="btn btn-outline-danger btn-sm"
+											data-bs-toggle="modal"
+											data-bs-target="#DeletePeriodModal"
+											data-period-id="@period.PeriodId"
+											aria-label="Delete class">
+										<i class="fa-solid fa-trash custom-icon"></i> Xóa
+									</button>
+								</td>
 							</tr>
+						}
+						<!-- Additional rows can go here -->
+						<tr id="noResults" style="display: none;">
+							<td colspan="5" class="text-center">Nothing found</td>
+						</tr>
 						</tbody>
 					</table>
+					<nav aria-label="Page navigation">
+						<ul class="pagination">
+							@if (Model.PaginatedPeriods.HasPreviousPage)
+							{
+								<li class="page-item">
+									<a class="page-link" asp-action="SchoolYear" asp-route-pageNumber="@(Model.PaginatedPeriods.PageIndex - 1)">Previous</a>
+								</li>
+							}
+							else
+							{
+								<li class="page-item disabled">
+									<span class="page-link">Previous</span>
+								</li>
+							}
+
+							@for (int i = 1; i <= Model.PaginatedPeriods.TotalPages; i++)
+							{
+								if (i == Model.PaginatedPeriods.PageIndex)
+								{
+									<li class="page-item active">
+										<span class="page-link">@i</span>
+									</li>
+								}
+								else
+								{
+									<li class="page-item">
+										<a class="page-link" asp-action="SchoolYear" asp-route-pageNumber="@i">@i</a>
+									</li>
+								}
+							}
+
+							@if (Model.PaginatedPeriods.HasNextPage)
+							{
+								<li class="page-item">
+									<a class="page-link" asp-action="SchoolYear" asp-route-pageNumber="@(Model.PaginatedPeriods.PageIndex + 1)">Next</a>
+								</li>
+							}
+							else
+							{
+								<li class="page-item disabled">
+									<span class="page-link">Next</span>
+								</li>
+							}
+						</ul>
+					</nav>
 				</div>
 				<!-- /.card-body -->
 			</div>
