--- a/CAPSTONE_TEAM01_2024/Views/Categories/SchoolYear.cshtml
+++ b/CAPSTONE_TEAM01_2024/Views/Categories/SchoolYear.cshtml
@@ -104,7 +104,7 @@
 						</tr>
 						</tbody>
 					</table>
-					<nav aria-label="Page navigation">
+					<nav aria-label="Page navigation" style=" float:right;">
 						<ul class="pagination">
 							@if (Model.PaginatedPeriods.HasPreviousPage)
 							{
