--- a/CAPSTONE_TEAM01_2024/Views/Categories/SchoolYear.cshtml
+++ b/CAPSTONE_TEAM01_2024/Views/Categories/SchoolYear.cshtml
@@ -100,7 +100,7 @@
 						}
 						<!-- Additional rows can go here -->
 						<tr id="noResults" style="display: none;">
-							<td colspan="5" class="text-center">Nothing found</td>
+							<td colspan="5" class="text-center">Không tìm thấy nội dung</td>
 						</tr>
 						</tbody>
 					</table>
@@ -115,7 +115,7 @@
 							else
 							{
 								<li class="page-item disabled">
-									<span class="page-link">Previous</span>
+									<span class="page-link">Trang Trước</span>
 								</li>
 							}
 
@@ -144,7 +144,7 @@
 							else
 							{
 								<li class="page-item disabled">
-									<span class="page-link">Next</span>
+									<span class="page-link">Trang Sau</span>
 								</li>
 							}
 						</ul>
