Update Search Function

--- a/CAPSTONE_TEAM01_2024/Views/Categories/SchoolYear.cshtml
+++ b/CAPSTONE_TEAM01_2024/Views/Categories/SchoolYear.cshtml
@@ -21,6 +21,7 @@
 }
 @using CAPSTONE_TEAM01_2024.Utilities
 @model CAPSTONE_TEAM01_2024.ViewModels.SchoolYearViewModel
+
 <div class="content-wrapper" style="min-height: 912.2px;">
 	<!-- Content Header (Page header) -->
 	<header class="content-header">
@@ -100,7 +101,7 @@
 						}
 						<!-- Additional rows can go here -->
 						<tr id="noResults" style="display: none;">
-							<td colspan="5" class="text-center">Không tìm thấy nội dung</td>
+								<td colspan="5" class="text-center" style="text-align:center">Không tìm thấy nội dung</td>
 						</tr>
 						</tbody>
 					</table>
